feat:agent上下文手动保存traceId